--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-18T00:55:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110473.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/backgroundImage_110567.png</key>
 							<dict>
 								<key>Digest</key>
@@ -114,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tTV91IH6xB8W
-								hr1T3fw8CQ==
+								MfDRWNJ2RvgE
+								To648Riytg==
 								</data>
 								<key>Size</key>
-								<integer>123654</integer>
+								<integer>123788</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -134,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aKJ5WxFHKY/m
-								H5jl4UAp4Q==
+								Jt2iC8S0XQ8l
+								oEZd1jag5g==
 								</data>
 								<key>Size</key>
-								<integer>53050</integer>
+								<integer>53457</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
