--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/1-Call-for-Abstracts/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-18T00:55:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nXUIdKuxLSUI
-								/XNyLzS9lg==
+								CQuoHdEBws/T
+								9sd/Op/hvw==
 								</data>
 								<key>Size</key>
-								<integer>100249</integer>
+								<integer>103814</integer>
 							</dict>
 							<key>files/stacks_page_page61.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QBIEffmBIh56
-								R25y5qps7Q==
+								edjGWB3yGfLF
+								QCkZ+Kv9qw==
 								</data>
 								<key>Size</key>
-								<integer>39842</integer>
+								<integer>41592</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
