--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/7-NetSci-Organizers/Contents.plist
@@ -35,21 +35,11 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-18T00:55:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
-							<key>files/backgroundImage_110494.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/ytKW+d8532o
-								LG20qBSPRw==
-								</data>
-								<key>Size</key>
-								<integer>383766</integer>
-							</dict>
 							<key>files/backgroundImage_110731.png</key>
 							<dict>
 								<key>Digest</key>
@@ -214,11 +204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dFXKwFB9Jf2g
-								kXIhUJWUTw==
+								XnCpQ+p5MjFz
+								T/8yNEuH5g==
 								</data>
 								<key>Size</key>
-								<integer>137582</integer>
+								<integer>137580</integer>
 							</dict>
 							<key>files/stacks_page_page58.js</key>
 							<dict>
