--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-18T00:55:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5y7iff67xlgD
-								qTTIY9tOpg==
+								K71vxFn75PU1
+								GYXQ4QMRBg==
 								</data>
 								<key>Size</key>
-								<integer>100249</integer>
+								<integer>103814</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7JTK1iiQ7TKr
-								RIGhvUXkJw==
+								mzyvD3YoD0pK
+								DD2gflgI6w==
 								</data>
 								<key>Size</key>
-								<integer>39750</integer>
+								<integer>42672</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
