--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-10T20:29:00Z</date>
+						<date>2018-09-18T01:11:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -90,25 +90,15 @@
 								<key>Size</key>
 								<integer>21870</integer>
 							</dict>
-							<key>files/stacks-image-d2c4351-164x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								5cpdWgCZk7HV
-								ROwHuQNbEg==
-								</data>
-								<key>Size</key>
-								<integer>29154</integer>
-							</dict>
 							<key>files/stacks_page_page56.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8jk2P48O5fBv
-								407GvguimQ==
+								Dz1xL/AfGbZk
+								ZZgX1MQYwA==
 								</data>
 								<key>Size</key>
-								<integer>104153</integer>
+								<integer>126882</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -124,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l2R6YBbbPrZo
-								IL73qiSAQg==
+								qNgQaOcRRDbJ
+								B8ol9mn1iA==
 								</data>
 								<key>Size</key>
-								<integer>40098</integer>
+								<integer>53528</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
