call for satellites button removed
call for satellites button removed

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -8252,7 +8252,7 @@
 					<key>page63 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-19T15:58:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8311,11 +8311,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qWqz9okFuyEQ
-								ePuYyjbuvw==
+								K71vxFn75PU1
+								GYXQ4QMRBg==
 								</data>
 								<key>Size</key>
-								<integer>104320</integer>
+								<integer>103814</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
@@ -8331,11 +8331,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cbhYXczFIfxd
-								eh81Ds168w==
+								JMLnDreaWA9M
+								bt8hl77Dkw==
 								</data>
 								<key>Size</key>
-								<integer>42896</integer>
+								<integer>42612</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9024,7 +9024,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-19T15:58:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10063,11 +10063,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FpbmxE6QfsOZ
-								/Hu15tHsVA==
+								c5ejAW3nLcs+
+								aWNaZxvzrA==
 								</data>
 								<key>Size</key>
-								<integer>3919</integer>
+								<integer>3253</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10171,7 +10171,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAqUqqQd8RgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAqVTMSsgugAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10182,7 +10182,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCpSqpB4xmA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCpVMxKyyGA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
