--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-19T15:58:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qWqz9okFuyEQ
-								ePuYyjbuvw==
+								K71vxFn75PU1
+								GYXQ4QMRBg==
 								</data>
 								<key>Size</key>
-								<integer>104320</integer>
+								<integer>103814</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cbhYXczFIfxd
-								eh81Ds168w==
+								JMLnDreaWA9M
+								bt8hl77Dkw==
 								</data>
 								<key>Size</key>
-								<integer>42896</integer>
+								<integer>42612</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
