Sat Call Netsci Button
Sat Call Netsci Button

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-19T18:41:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -532,11 +532,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0mfu4tskyLYo
-								gmgo9v4bJw==
+								9rXamXikCV6f
+								SEq1Ur3S7A==
 								</data>
 								<key>Size</key>
-								<integer>157129</integer>
+								<integer>157545</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
