--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/2-Call-for-Satellites/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T15:58:14Z</date>
+						<date>2018-09-19T18:41:14Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								K71vxFn75PU1
-								GYXQ4QMRBg==
+								qWqz9okFuyEQ
+								ePuYyjbuvw==
 								</data>
 								<key>Size</key>
-								<integer>103814</integer>
+								<integer>104320</integer>
 							</dict>
 							<key>files/stacks_page_page63.js</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JMLnDreaWA9M
-								bt8hl77Dkw==
+								BPeZ7/mi0k/F
+								DpOhyfFSyg==
 								</data>
 								<key>Size</key>
-								<integer>42612</integer>
+								<integer>43254</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
