--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-09-19T14:31:44Z</date>
+						<date>2018-09-24T15:40:42Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -422,11 +422,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CMiIO6+Us/xF
-								jKyECw6Q6g==
+								7HGwAYtBmeEo
+								7zuYEHkxpQ==
 								</data>
 								<key>Size</key>
-								<integer>126273</integer>
+								<integer>126272</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
